crates/pardosa-schema/tests/compile_fail/unit_field.rs
use pardosa_schema::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    marker: (),
}

fn main() {}
