crates/pardosa-schema/tests/compile_fail/unit_field.stderr
error[E0277]: the trait bound `(): GenomeSafe` is not satisfied
 --> tests/compile_fail/unit_field.rs:5:13
  |
5 |     marker: (),
  |             ^^ the trait `GenomeSafe` is not implemented for `()`
  |
  = help: the following other types implement trait `GenomeSafe`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
            (T0, T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
